--- a/carrinho-de-compras/src/app/app.component.html
+++ b/carrinho-de-compras/src/app/app.component.html
@@ -1,4 +1,7 @@
-<p class="md-body-2">Body copy with medium weight.</p>
-<md-button>Button</md-button>
-<p class="md-body-1">Regular body copy <small class="md-caption">with small text</small>.</p>
-<span class="md-caption">Caption</span>
+
+<div class="theme-app" [ngClass]="'menu tabbed footer'">
+    <div class="theme-main-container">
+        <app-home></app-home>
+        <router-outlet></router-outlet>
+    </div>
+</div>
