edição dos itens

--- a/carrinho-de-compras/src/app/app.component.html
+++ b/carrinho-de-compras/src/app/app.component.html
@@ -1,6 +1,8 @@
-
-<div class="theme-app" [ngClass]="'menu tabbed footer'">
+<div class="theme-app around" [ngClass]="'menu tabbed footer'">
     <div class="theme-main-container">
+        <div class="ui-g">
+            <div class="ui-g-12"> </div>
+        </div>
         <app-home></app-home>
         <router-outlet></router-outlet>
     </div>
