--- a/carrinho-de-compras/src/app/usuario/usuario-form/usuario-form.component.html
+++ b/carrinho-de-compras/src/app/usuario/usuario-form/usuario-form.component.html
@@ -4,12 +4,12 @@
         <div class="p-grid p-align-end">
             <div class="p-col-12 p-md-6 p-lg-6 ui-fluid">
                 <h5>Nome <span class="required">*</span></h5>
-                <input id="nome" type="text" pInputText maxlength="100" formControlName="nome" disabled>
+                <input id="nome" type="text" size="80%" pInputText maxlength="100" formControlName="nome">
             </div>
 
             <div class="p-col-12 p-md-6 p-lg-6 ui-fluid">
                 <h5>E-mail <span class="required">*</span></h5>
-                <input id="email" type="text" pInputText maxlength="100" formControlName="email">
+                <input id="email" type="text" size="80%" pInputText maxlength="100" formControlName="email">
             </div>
         </div>
         <div class="p-grid p-align-end p-justify-end">
@@ -20,5 +20,6 @@
                 <button pButton type="submit" label="Salvar" (click)="salvar()"></button>
             </div>
         </div>
+
     </form>
 </p-card>
