gravação de usuários no banco

--- a/carrinho-de-compras/src/app/usuario/usuario-form/usuario-form.component.html
+++ b/carrinho-de-compras/src/app/usuario/usuario-form/usuario-form.component.html
@@ -1,6 +1,6 @@
 <div class="ui-card-title">Incluir</div>
 <p-card>
-    <form formControlName="formulario">
+    <form [formGroup]="formulario">
         <div class="p-grid p-align-end">
             <div class="p-col-12 p-md-6 p-lg-6 ui-fluid">
                 <h5>Nome <span class="required">*</span></h5>
