--- a/carrinho-de-compras/src/app/usuario/usuario-form/usuario-form.component.html
+++ b/carrinho-de-compras/src/app/usuario/usuario-form/usuario-form.component.html
@@ -9,7 +9,7 @@
 
             <div class="p-col-12 p-md-6 p-lg-6 ui-fluid">
                 <h5>E-mail <span class="required">*</span></h5>
-                <input id="email" type="text" size="80%" pInputText maxlength="100" formControlName="email">
+                <input id="email" required type="text" size="80%" pInputText maxlength="100" formControlName="email">
             </div>
         </div>
         <div class="p-grid p-align-end p-justify-end">
