--- a/carrinho-de-compras/src/app/home/home.component.html
+++ b/carrinho-de-compras/src/app/home/home.component.html
@@ -1,7 +1,4 @@
 <div class="ui-card-title">Desafio Altran</div>
-
 <p-card class="card">
-
-  <p-tabMenu [model]="items"></p-tabMenu>
-
+  <p-tabMenu [model]="itensMenu"></p-tabMenu>
 </p-card>
