--- a/carrinho-de-compras/src/app/usuario/usuario-form/usuario-form.component.html
+++ b/carrinho-de-compras/src/app/usuario/usuario-form/usuario-form.component.html
@@ -1,23 +1,24 @@
-<div class="ui-card-title">Incluir</div>
 <p-card>
+    <div class="ui-card-title">Incluir</div>
     <form [formGroup]="formulario">
         <div class="p-grid p-align-end">
             <div class="p-col-12 p-md-6 p-lg-6 ui-fluid">
                 <h5>Nome <span class="required">*</span></h5>
-                <input id="nome" type="text" size="80%" pInputText maxlength="100" formControlName="nome">
+                <input id="nome" required type="text" size="80%" pInputText maxlength="100" placeholder="Informe o nome" 
+                            formControlName="nome">
             </div>
 
             <div class="p-col-12 p-md-6 p-lg-6 ui-fluid">
                 <h5>E-mail <span class="required">*</span></h5>
-                <input id="email" required type="text" size="80%" pInputText maxlength="100" formControlName="email">
+                <input id="email" required type="email" size="80%" pInputText maxlength="100"  formControlName="email">
             </div>
         </div>
-        <div class="p-grid p-align-end p-justify-end">
-            <div class="p-col-12 p-md-2 p-lg-2 p-xl-1 ui-fluid">
-                <a pButton label="Voltar" class="ui-button-warning" routerLink="../usuariolist"></a>
-            </div>
+        <div class="p-grid p-align-end">
             <div class="p-col-12 p-md-2 p-lg-2 p-xl-1 ui-fluid">
                 <button pButton type="submit" label="Salvar" (click)="salvar()"></button>
+            </div>
+            <div class="p-col-12 p-md-2 p-lg-2 p-xl-1 ui-fluid">
+                <a pButton label="Voltar" class="ui-button-warning" routerLink="../usuariolist"></a>
             </div>
         </div>
 
